...
            Text(authController.user?.email ?? ''),
            const SizedBox(height: 24),
            OutlinedButton(
              onPressed: () {
                authController.signOut();
              },
              child: const Text('Cerrar sesión'),
            ),
          ],
        ),
      ),
    );
  }
...
